--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -3,7 +3,7 @@ name: Build and Upload Wheels
 on:
   push:
     tags:
-      - 'v*'  # Trigger on version tags like v0.1.0
+      - 'v*'  # e.g. v0.1.0
 
 jobs:
   build:
@@ -27,6 +27,22 @@ jobs:
 
       - name: Install maturin
         run: pip install maturin
+
+      # --- Install cfitsio ---
+      - name: Install cfitsio on Ubuntu
+        if: runner.os == 'Linux'
+        run: sudo apt-get update && sudo apt-get install -y libcfitsio-dev
+
+      - name: Install cfitsio on macOS
+        if: runner.os == 'macOS'
+        run: brew install cfitsio
+
+      - name: Install cfitsio on Windows
+        if: runner.os == 'Windows'
+        run: |
+          choco install cfitsio
+        continue-on-error: true  # fallback in case choco package fails
+      # You may need to build from source on Windows if cfitsio via choco doesn't work
 
       - name: Build wheel with maturin
         run: maturin build --release --strip -o dist
