--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
@@ -36,13 +36,6 @@ jobs:
       - name: Install cfitsio on macOS
         if: runner.os == 'macOS'
         run: brew install cfitsio
-
-      - name: Install cfitsio on Windows
-        if: runner.os == 'Windows'
-        run: |
-          choco install cfitsio
-        continue-on-error: true  # fallback in case choco package fails
-      # You may need to build from source on Windows if cfitsio via choco doesn't work
 
       - name: Build wheel with maturin
         run: maturin build --release --strip -o dist
